src/objects/Personal_Pages_Link__c.object
<CustomObject>
    <description>Personal Pages Links is for the creation and maintenance of links on the personal pages.</description>
    <fields>
        <fullName>LinkCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Pages Link Category</label>
        <referenceTo>PersonalPagesLinkCategory__c</referenceTo>
        <relationshipLabel>Personal Pages Links</relationshipLabel>
        <relationshipName>Personal_Pages_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkGroup__c</fullName>
        <label>Link Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkType__c</fullName>
        <label>Link Type</label>
        <picklist>
            <picklistValues>
                <fullName>Web Page</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TilePosition__c</fullName>
        <label>Tile Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>affiliation__c</fullName>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>WGU-SLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-TEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-TEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <description>The display name for the link.</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sort_order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Personal Pages Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>label__c</columns>
        <columns>link__c</columns>
        <columns>image__c</columns>
        <columns>active__c</columns>
        <columns>sort_order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Personal Pages Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Pages Links</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>